email sending fixed and working as expected

--- a/.env.sample
+++ b/.env.sample
@@ -5,10 +5,12 @@ DATABASE_PASSWORD=password
 DATABASE_NAME=blockchain_tracker
 
 MORALIS_API_KEY=your_moralis_api_key
-
+# used gmail to send this you just need to add your gmail 
+# account credential below with host updated to smtp.gmail.com
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your_email@example.com
+# if you are using gmail.com for sending this alert email go to setting and create an App Password!
 SMTP_PASS=your_email_password
 
 ALERT_EMAIL=hyperhire_assignment@hyperhire.in
